# calendar-to-do-list

./: .gitignore  LICENSE  README.md  auth.json
CalendarToDoList/: CMakeLists.txt  CMakeLists.txt.user.f984a74  CalendarToDoList_en_US.ts  calendarclient.cpp  calendarclient.h  errormanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  usercalendarschoice.cpp  usercalendarschoice.h  userform.cpp  userform.h  userform.ui
CalendarToDoList/CalendarClient/: CalendarClient.cpp  CalendarClient.h  CalendarClient_CalDAV.cpp  CalendarClient_CalDAV.h  CalendarClient_CalDAV_ReceiveResonse.cpp  CalendarClient_CalDAV_SendRequest.cpp  CalendarClient_CalDAV_StateMachine.cpp  CalendarClient_CalDAV_Utils.cpp  CalendarClient_ICS.cpp  CalendarClient_ICS.h  CalendarClient_ICS_ReceiveResonse.cpp  CalendarClient_ICS_SendRequest.cpp  CalendarClient_ICS_StateMachine.cpp  CalendarEvent.cpp  CalendarManager.cpp  CalendarManager.h  DateUtils.cpp  DateUtils.h  SimpleCrypt.cpp  SimpleCrypt.h
CalendarToDoList/calendar_classes/: calendar.cpp  calendar.h  calendarevent.cpp  calendarevent.h  calendartypes.h  icalendarcomponent.cpp  icalendarcomponent.h  task.cpp  task.h
CalendarToDoList/googleauth/: googleauth.cpp  googleauth.h
CalendarToDoList/icons/: icons.qrc
CalendarToDoList/widgets/: calendartable.cpp  calendartable.h  calendartable.ui  calendartableitem.cpp  calendartableitem.h  componentlistwidget.cpp  componentlistwidget.h  createeventform.cpp  createeventform.h  createeventform.ui  eventwidget.cpp  eventwidget.h  tasklistwidget.cpp  tasklistwidget.h  taskwidget.cpp  taskwidget.h  usercalendarschoice.cpp  usercalendarschoice.h  usercalendarschoice.ui  userform.cpp  userform.h  userform.ui
